# IOCP

./: CMakeLists.txt  test-server.cc
client/: CMakeLists.txt  pipe_client.h  test.cc
core/: Server.h  conn.cc  conn.h  engine.cc  engine.h  event.h  id-generate.h  io-object.h  iocp_define.h  prot_pak.cc  prot_pak.h  server.cc
pipe/: pipe-object.cc  pipe-object.h  pipe-server.cc  pipe-server.h
